--- a/style-tile/css/styles.css
+++ b/style-tile/css/styles.css
@@ -3,7 +3,7 @@ h2, h3, p {
 	margin: 0;
 }
 
-/* font styles */
+/* font background-size: tyles */
 p{
 	font-family: 'Raleway', sans-serif;
 }
@@ -38,6 +38,20 @@ section {
 	height: 50px;
 	width: 50px;
 }
+/* floats*/
+.p1, 
+.p2{
+	width: 46%;
+}
+
+.p1 {
+	float: left;
+}
+
+.p2{
+	float: right;
+}
+
 
 /* Color styling*/
 .color-1 {
