--- a/style-tile/css/styles.css
+++ b/style-tile/css/styles.css
@@ -17,6 +17,12 @@ p {
 	line-height: 135%;
 }
 
+body {
+	background-image: url('../img/mochaGrunge.png');
+
+
+}
+
 /* Layout for Style Tile*/
 section {
 	margin: 15px 0;
@@ -25,12 +31,12 @@ section {
 .color-1,
 .color-3,
 .color-4,
-.color-5,
+.color-5, 
 .pattern-1,
 .pattern-2,
 .pattern-3 {
 	float: left;
-	margin: 10px 10px 0 0;
+	margin: 10px 15px 0 0;
 	height: 75px;
 	width: 75px;
 }
@@ -65,6 +71,25 @@ section {
 
 .color-5 {
 	background-color: #C2C2A3;
+}
+
+/* pattern styles */
+.pattern-1,
+.pattern-2,
+.pattern-3 {
+	border: 5px solid white;
+}
+
+.pattern-1 {
+	background-image: url('../img/stardust.png');
+}
+
+.pattern-2 {
+	background-image: url('../img/old_moon.png');
+}
+
+.pattern-3 {
+	background-image: url('../img/otis_redding.png');
 }
 
 /* Second title color */
