--- a/style-tile/css/styles.css
+++ b/style-tile/css/styles.css
@@ -16,15 +16,12 @@ h3 {
 p {
 	font-family: 'Raleway', sans-serif;
 	line-height: 135%;
+	color: white;
 }
 
 body {
 	background-image: url('../img/fog.jpg');
 	/*background-color: #FFFFFF;8*/
-}
-
-.footer {
-	background-color: black;
 }
 
 /* Layout for Style Tile*/
