fixed check box & style tile links

--- a/style-tile/css/styles.css
+++ b/style-tile/css/styles.css
@@ -110,10 +110,14 @@ em {
 }
 
 /* link styles */
-a {
+a	 {
 	color: #FF0000;
+	text-decoration: none;
 }
 
+a:hover  {
+	color: white;
+}
 
 /* Show Grid */
 .showgrid {
